replaced 100vw with 100%to fix site-wide scrollbar

--- a/styles/pages/About.module.css
+++ b/styles/pages/About.module.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction:row;
     height: 15vw;
-    width: 100vw;
+    width: 100%;
 }
